--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
         </div>
     <!-- Plans -->
         <div class="plans">
-            <div class="row" style="justify-content: space-around">
-                <div class="plan col-md-3">
+            <div class="row" style="justify-content: center">
+                <div class="plan col-lg-3" style="margin-right: 30px">
                     <h2>Winter</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nobis architecto expedita quia exercitationem provident molestiae accusantium minima distinctio quidem.</p>
                     <button class="bannerBtn" style="margin-top: 20px">Check Availability</button>
                 </div>
-                <div class="plan col-md-3">
+                <div class="plan col-lg-3" style="margin-right: 30px">
                     <h2>Fall / Spring</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nobis architecto expedita quia exercitationem provident molestiae accusantium minima distinctio quidem.</p>
                     <button class="bannerBtn" style="margin-top: 20px">Check Availability</button>
                 </div>
-                <div class="plan col-md-3">
+                <div class="plan col-lg-3">
                     <h2>Summer</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nobis architecto expedita quia exercitationem provident molestiae accusantium minima distinctio quidem.</p>
                     <button class="bannerBtn" style="margin-top: 20px">Check Availability</button>
@@ -69,32 +69,30 @@
             <div class="whereToGoRight">
                 <h2>WHERE TO GO ?</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus consequuntur suscipit qui! Culpa dicta hic nemo illum laborum assumenda eaque voluptates ipsa molestias veritatis cupiditate magni, itaque asperiores! Facere, assumenda.</p>
-                <div style="width: 100%; margin: 100px auto 0; text-align: center; display: flex; flex-flow: row; justify-content: center;">
-                    <button class="TourSelectBtn1" style="margin: 0 10px">First Tour</button>
-                    <button class="TourSelectBtn2" style="margin: 0 10px">Hobbyist</button>
-                    <button class="TourSelectBtn3" style="margin: 0 10px">Professional</button>
+                <div style="max-width: 100%; margin:0; text-align: center; display: flex; flex-flow: row; justify-content: center; flex-wrap:wrap">
+                    <button class="TourSelectBtn1">First Tour</button>
+                    <button class="TourSelectBtn2">Hobbyist</button>
+                    <button class="TourSelectBtn3">Professional</button>
                 </div>
-                <div style="width: 90%; margin: 0 auto; text-align: center; display: flex; flex-flow: row; justify-content: center;">
-                        <button class="secondQ secondQ0 BackBtn" style="margin: 0 10px">Back</button>
-                    <div class="secondQuestions" style='display: flex; flex-flow: row; justify-content: center;'>
-                        <button class="secondQ secondQ1 MountainBtn1" style="margin: 0 10px">Mountains ?</button>
-                        <button class="secondQ secondQ2 NatureBtn2" style="margin: 0 10px">Forests ?</button>
-                        <button class="secondQ secondQ3 VillageBtn3" style="margin: 0 10px">Villages ?</button>
-                    </div>
+                <div style="width: 100%; margin:0; text-align: center; display: flex; flex-flow: row; justify-content: center; flex-wrap: wrap;">
+                        <button class="secondQ secondQ0 BackBtn" style="margin: 10px 5px">Back</button>
+                        <button class="secondQ secondQ1 MountainBtn1" style="margin: 10px 5px">Mountains ?</button>
+                        <button class="secondQ secondQ2 NatureBtn2" style="margin: 10px 5px">Forests ?</button>
+                        <button class="secondQ secondQ3 VillageBtn3" style="margin: 10px 5px">Villages ?</button>
                 </div>
                 <div class="finalPlans">
-                    <div class="placeToGoFinalTitle" style="display: flex; flex-flow: row; justify-content: space-between">
+                    <div class="placeToGoFinalTitle" style="display: flex; flex-flow: row; justify-content: center; margin-top: 30px;">
                         <h4 class="placeToGo">Place to go</h4>
-                        <div class="finalPlanBtns" style="display: flex; flex-flow: row">
-                            <button class="planBackBtn">Back</button>
-                            <button class="planFinalBtn">Subscribe</button>
-                        </div>
                     </div>
                     <hr>
                     <p class=planTime>Time and Duration:</p>
                     <p class="planPrice1">Price for each:</p>
                     <p class="planPrice2">Price for couples:</p>
                     <p class="planDesc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat, eos qui ex quia, pariatur maiores voluptatibus labore fugit veniam aut obcaecati facere distinctio nam earum magnam, perferendis esse. A, odio?</p>
+                    <div class="finalPlanBtns" style="display: flex; flex-flow: row; justify-content: center">
+                        <button class="planBackBtn">Back</button>
+                        <button class="planFinalBtn">Subscribe</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -129,13 +127,13 @@
                     <img src="https://images.unsplash.com/photo-1530577197743-7adf14294584?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2081&q=80"  alt="Testimonial"
                     style="width: 200px; height: 200px; border-radius: 50%">
                     <h3>Mariana / Florida</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae numquam quae magnam facilis nostrum nulla doloribus nemo sequi, corporis, voluptas nobis debitis cupiditate nam eveniet delectus recusandae voluptates exercitationem, animi eos dolor minus odit. Assumenda dolorem corporis ex aliquam perspiciatis similique ad deleniti nostrum, asperiores, totam amet nihil officiis, ea magnam et cupiditate voluptatum dolor ipsum aut quasi magni autem at? Corporis sit illum veritatis error fugiat beatae, necessitatibus aut dolore id doloremque rerum aliquid ipsam labore cupiditate dolorum repudiandae ducimus sequi ea eligendi quasi.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo repudiandae molestias molestiae deserunt, tempore culpa eaque commodi aspernatur, optio repellendus, enim ipsa obcaecati saepe in magnam quo eius eum iusto nulla at aperiam quos laboriosam.</p>
                   </div>
                   <div class="carousel-item testimonialBox">
                     <img src="https://images.unsplash.com/photo-1570295999919-56ceb5ecca61?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2080&q=80"  alt="Testimonial"
                     style="width: 200px; height: 200px; border-radius: 50%">
                     <h3>Mariana / Florida</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vero autem dolore, excepturi voluptates quod optio laboriosam voluptate reiciendis rerum veniam quae quisquam fugit minima numquam aspernatur non itaque cupiditate! In nesciunt reprehenderit qui soluta vitae voluptate quae unde vero, necessitatibus mollitia vel rerum minima temporibus doloribus ab esse ut, sint ipsa commodi dicta ipsum, eveniet aspernatur labore? Doloribus, porro. Laudantium voluptate natus fuga possimus nostrum iusto deleniti quasi eligendi?</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo repudiandae molestias molestiae deserunt, tempore culpa eaque commodi aspernatur, optio repellendus, enim ipsa obcaecati saepe in magnam quo eius eum iusto nulla at aperiam quos laboriosam.</p>
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -153,16 +151,16 @@
 
     <h2 class="investorTitle" style="width: 60%; font-size: 2rem;">Be always in the tribe, We have weekly news, monthly offers and many other news that might put you in a brand new journey !</h2> 
 
-        <div class="signIn" style='margin-bottom: 200px;'>
+        <div class="signIn" style='margin-bottom: 200px; height: fit-content;'>
             <div class="row" style="margin: auto; justify-content: center;">
-                <div class="col-md-4 signBox" style="text-align: center; padding: 30px;">
+                <div class="col-lg-4 signBox" style="text-align: center; padding: 30px;">
                     <h5 class="signInTitle">Sign In</h5>
                     <hr>
                     <form class="signInForm">
-                        <label style="width: 130px; text-align: left;">Username: </label>
+                        <label style="text-align: left;">Username: </label><br>
                         <input type="username" id="signInUserName"> 
                         <br>
-                        <label style="width: 130px; text-align: left;">Password:</label>
+                        <label style="text-align: left;">Password:</label><br>
                         <input type="password" id="signInPassword"> 
                         <br>
                         <button type="submit" class="signInBtn">Sign in</button>
@@ -173,17 +171,17 @@
                         <p style="line-height: 1.5rem; width: 70%; margin: 30px auto;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut in cumque ea quisquam recusandae porro placeat officia velit consectetur veritatis?</p>
                     </div>
                 </div>
-                <div class="col-md-4 signBox" style="text-align: center; padding: 30px;">
+                <div class="col-lg-4 signBox" style="text-align: center; padding: 30px;">
                     <h5 class="signInTitle">Join Us</h5>
                     <hr>
                     <form class="signUpForm" style="margin-top: 45px">
-                        <label style="width: 130px; text-align: left;">Username: </label>
+                        <label style="text-align: left;">Username: </label><br>
                         <input type="username" id="signUpUserName">
                         <br>
-                        <label style="width: 130px; text-align: left;">Password:</label>
+                        <label style="text-align: left;">Password:</label><br>
                         <input type="password" id="signUpPassword">
                         <br>
-                        <label style="width: 130px; text-align: left;">Repeat Password:</label>
+                        <label style="text-align: left;">Repeat Password:</label><br>
                         <input type="password" id="signUpPasswordCheck">
                         <br>
                         <button type="submit" class="signInBtn">Sign in</button>
