--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
     <!-- Plans -->
         <div class="plans">
             <div class="row" style="justify-content: center">
-                <div class="plan col-lg-3" style="margin-right: 30px">
+                <div class="plan col-lg-3" style="margin: 15px">
                     <h2>Winter</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nobis architecto expedita quia exercitationem provident molestiae accusantium minima distinctio quidem.</p>
                     <button class="bannerBtn" style="margin-top: 20px">Check Availability</button>
                 </div>
-                <div class="plan col-lg-3" style="margin-right: 30px">
+                <div class="plan col-lg-3" style="margin: 15px">
                     <h2>Fall / Spring</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nobis architecto expedita quia exercitationem provident molestiae accusantium minima distinctio quidem.</p>
                     <button class="bannerBtn" style="margin-top: 20px">Check Availability</button>
                 </div>
-                <div class="plan col-lg-3">
+                <div class="plan col-lg-3" style="margin: 15px">
                     <h2>Summer</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nobis architecto expedita quia exercitationem provident molestiae accusantium minima distinctio quidem.</p>
                     <button class="bannerBtn" style="margin-top: 20px">Check Availability</button>
@@ -68,7 +68,7 @@
             <div class="whereToGoLeft" style="background-image: URL('https://images.unsplash.com/photo-1634612192395-afa440677f80?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2080&q=80')"></div>
             <div class="whereToGoRight">
                 <h2>WHERE TO GO ?</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus consequuntur suscipit qui! Culpa dicta hic nemo illum laborum assumenda eaque voluptates ipsa molestias veritatis cupiditate magni, itaque asperiores! Facere, assumenda.</p>
+                <p class="whereToGoTxt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus consequuntur suscipit qui! Culpa dicta hic nemo illum laborum assumenda eaque voluptates ipsa molestias veritatis cupiditate magni, itaque asperiores! Facere, assumenda.</p>
                 <div style="max-width: 100%; margin:0; text-align: center; display: flex; flex-flow: row; justify-content: center; flex-wrap:wrap">
                     <button class="TourSelectBtn1">First Tour</button>
                     <button class="TourSelectBtn2">Hobbyist</button>
